- fixed css scene parsing failure - added null checks / empty for updating the playlist queue box - fixed an error with the search button throwing an array index out of bounds - hopefully fixed the timer for leaving and joining lobbies - leaving and joining lobby functionality added. packet sent when ending a session or leaving a lobby to remove a user - fixed some random small bugs

--- a/src/main/resources/scene.css
+++ b/src/main/resources/scene.css
@@ -5,7 +5,7 @@
 .button {
     -fx-alignment: center;
     -fx-text-alignment: center;
-    -fx-font: "Courier New";
+    -fx-font-family: "Courier New";
     -fx-background-color: #061905;
     -fx-text-fill: #ffffff;
 }
@@ -17,7 +17,7 @@
 
 .label {
     -fx-alignment: center;
-    -fx-font: "Times New Roman";
+    -fx-font-family: "Times New Roman";
     -fx-text-fill: #ffffff;
 }
 
